Adding getLinkedRPs and unlinkRP plus some doc updates
