# application/src/models/resource_api.rs
@@ -1,6 +1,8 @@
 use crate::db::identity_provider_dao;
 use serde::{Deserialize, Serialize};
 use std::collections::HashSet;
+use uuid::Uuid;
+use crate::db::resource_provider_account_logins::ResourceAccountLogin;
 
 #[derive(Debug, Serialize, Hash, Eq, PartialEq, Clone)]
 pub struct ResourceProvider {
@@ -13,8 +15,19 @@ pub struct ResourceProvider {
     #[serde(rename = "userInfoUrl")]
     pub user_info_url: Option<String>,
 }
-pub type GetResourceProviderResponse = HashSet<ResourceProvider>;
 
+#[derive(Debug, Serialize, Deserialize, Hash, Eq, PartialEq, Clone)]
+pub struct ResourceProviderLink {
+    pub tms_identity: String,
+    pub resource_provider_uuid: String,
+    pub resource_provider_account: String,
+    pub last_login: String,
+    pub enabled: bool,
+}
+
+pub type GetResourceProviderResponse = HashSet<ResourceProvider>;
+pub type UnlinkResourceProviderResponse = ResourceProviderLink;
+pub type GetLinkedResourceProviderResponse = HashSet<ResourceProviderLink>;
 #[derive(Debug, Deserialize, Serialize, Clone)]
 pub struct ResourceProviderAuthorizeRequest {
     pub provider_id: String,
@@ -29,6 +42,18 @@ impl From<identity_provider_dao::IdentityProvider> for ResourceProvider {
             client_id: value.client_id,
             oauth2_token_url: value.oauth2_token_url,
             user_info_url: value.oidc_user_info_url,
+        }
+    }
+}
+
+impl From<ResourceAccountLogin> for ResourceProviderLink {
+    fn from(value: ResourceAccountLogin) -> Self {
+        ResourceProviderLink {
+            tms_identity: value.tms_identity.clone(),
+            resource_provider_uuid: value.resource_provider_uuid.unwrap().to_string(),
+            last_login: value.last_login.to_rfc3339(),
+            enabled: value.enabled,
+            resource_provider_account: value.resource_provider_account,
         }
     }
 }
